2026-02-10  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* Sets.Integer: new
	* Perl.S/M.ranged: new

2026-02-10  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.1.6: cleanups
	* bin/pml.ml: split off bin/pml_admin.ml

2026-02-09  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.1.5: new option --delete_artist, -C and -P accept regular expressions

2026-02-09  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.1.4: handle multi-composer discs better:
	* lib/artist_type.ml: rank of persons with more than one role
	* lib/tagged.ml: select composer and performer from the artists
  	   common to all selected tracks.
	* lib/edit.ml: don't compress white space in filenames anymore
	* factorize CLI

2026-02-08  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.1.3: Edit.perl_s: mimic perl's "s/regexp/subst/flags"
	commands (without leading 's')

2026-02-07  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.1.2: add --edit_prefix and --edit_title

2026-02-06  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.1.1: push to github

