@@ -82,10 +82,10 @@ module Edits : sig
                                       that we use as a candidate for the overall title. *);
       edit_title : Perl.S.t list (** Apply a [perl]-style [/regexp/substitution/flags]
                                      edit to the overall title. *);
-      delete_artists : Perl.M.t list (** List of [perl]-style [/regexp/flags/] expressions
-                                         for deleting artists with matching name. *);
-      delete_artists_sort : Perl.M.t list (** List of [perl]-style [/regexp/flags/] expressions
-                                              for deleting artists with matching sort-name. *);
+      delete_artists : Perl.M.ranged list (** List of [perl]-style [/regexp/flags/] expressions
+                                              for deleting artists with matching name. *);
+      delete_artists_sort : Perl.M.ranged list (** List of [perl]-style [/regexp/flags/] expressions
+                                                   for deleting artists with matching sort-name. *);
       composer_pattern : Perl.M.t option (** Select the composer among the artists by a regexp. *);
       performer_pattern : Perl.M.t option (** Select the top-billed performer among the artists
                                               by a regexp. *);
